arguments in training ipynb better explained, model saved at the end of ppo.py

--- a/run_training_experiment.ipynb
+++ b/run_training_experiment.ipynb
@@ -2,134 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------ REACHED ENVIROMENT SETUP ------------\n",
-      "🔍 Observation space: Box([  0.   0.   0.   0.   0.   0.   0.   0.   0.   0. -inf -inf -inf -inf\n",
-      " -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf\n",
-      " -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf], [ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1. inf inf inf inf inf inf inf inf\n",
-      " inf inf inf inf inf inf inf inf inf inf inf inf inf inf inf inf inf inf\n",
-      " inf inf inf inf], (40,), float64)\n",
-      "🔍 Observation space shape: (40,)\n",
-      "------------ FINISHED ENVIRONMENT SETUP ------------\n",
-      "global_step=500, episodic_return=[9.835805e+16]\n",
-      "global_step=500, episodic_return=[8.6457273e+15]\n",
-      "global_step=500, episodic_return=[2.4528235e+19]\n",
-      "global_step=500, episodic_return=[7.800497e+16]\n",
-      "global_step=500, episodic_return=[2.9835225e+14]\n",
-      "SPS: 2353\n",
-      "global_step=1000, episodic_return=[1.6523771e+22]\n",
-      "global_step=1000, episodic_return=[8.2237835e+16]\n",
-      "global_step=1000, episodic_return=[4.51153e+16]\n",
-      "global_step=1000, episodic_return=[2.8666428e+20]\n",
-      "global_step=1000, episodic_return=[2.0531772e+19]\n",
-      "SPS: 2438\n",
-      "global_step=1500, episodic_return=[3.485087e+14]\n",
-      "global_step=1500, episodic_return=[1.1313171e+20]\n",
-      "global_step=1500, episodic_return=[1.03447964e+18]\n",
-      "global_step=1500, episodic_return=[6.21963e+20]\n",
-      "global_step=1500, episodic_return=[1.815715e+24]\n",
-      "SPS: 2469\n",
-      "global_step=2000, episodic_return=[3.4599157e+18]\n",
-      "global_step=2000, episodic_return=[3.4721692e+13]\n",
-      "global_step=2000, episodic_return=[1.1156487e+14]\n",
-      "global_step=2000, episodic_return=[5.2181393e+20]\n",
-      "global_step=2000, episodic_return=[9.298928e+17]\n",
-      "global_step=2500, episodic_return=[2.9207204e+13]\n",
-      "global_step=2500, episodic_return=[5.5033598e+16]\n",
-      "global_step=2500, episodic_return=[7.061033e+19]\n",
-      "global_step=2500, episodic_return=[5.065212e+16]\n",
-      "global_step=2500, episodic_return=[2.5884359e+13]\n",
-      "SPS: 2481\n",
-      "global_step=3000, episodic_return=[2.1727145e+20]\n",
-      "global_step=3000, episodic_return=[3.6624398e+19]\n",
-      "global_step=3000, episodic_return=[1.947171e+22]\n",
-      "global_step=3000, episodic_return=[2.5327809e+19]\n",
-      "global_step=3000, episodic_return=[1.6596148e+20]\n",
-      "SPS: 2492\n",
-      "global_step=3500, episodic_return=[3.6348906e+17]\n",
-      "global_step=3500, episodic_return=[1.0993498e+23]\n",
-      "global_step=3500, episodic_return=[3.6772188e+19]\n",
-      "global_step=3500, episodic_return=[8.409675e+15]\n",
-      "global_step=3500, episodic_return=[1.2882169e+19]\n",
-      "SPS: 2499\n",
-      "global_step=4000, episodic_return=[2.0491617e+22]\n",
-      "global_step=4000, episodic_return=[1.3268016e+19]\n",
-      "global_step=4000, episodic_return=[1.1813751e+16]\n",
-      "global_step=4000, episodic_return=[1.9943763e+17]\n",
-      "global_step=4000, episodic_return=[8.449945e+17]\n",
-      "SPS: 2504\n",
-      "global_step=4500, episodic_return=[7.857034e+17]\n",
-      "global_step=4500, episodic_return=[1.4280527e+18]\n",
-      "global_step=4500, episodic_return=[2.4459914e+16]\n",
-      "global_step=4500, episodic_return=[1.5429646e+23]\n",
-      "global_step=4500, episodic_return=[3.5154984e+12]\n",
-      "global_step=5000, episodic_return=[1.4601266e+19]\n",
-      "global_step=5000, episodic_return=[9.464022e+13]\n",
-      "global_step=5000, episodic_return=[5.7538576e+27]\n",
-      "global_step=5000, episodic_return=[1.2700452e+12]\n",
-      "global_step=5000, episodic_return=[1.6456517e+16]\n",
-      "SPS: 2506\n",
-      "global_step=5500, episodic_return=[1.3156091e+22]\n",
-      "global_step=5500, episodic_return=[1.1848696e+22]\n",
-      "global_step=5500, episodic_return=[1.5732637e+15]\n",
-      "global_step=5500, episodic_return=[5.640355e+14]\n",
-      "global_step=5500, episodic_return=[2.2579738e+20]\n",
-      "SPS: 2509\n",
-      "global_step=6000, episodic_return=[1.00618635e+15]\n",
-      "global_step=6000, episodic_return=[5.5976397e+13]\n",
-      "global_step=6000, episodic_return=[5.4404484e+11]\n",
-      "global_step=6000, episodic_return=[3.410991e+15]\n",
-      "global_step=6000, episodic_return=[8.515423e+23]\n",
-      "SPS: 2510\n",
-      "global_step=6500, episodic_return=[1.1734071e+15]\n",
-      "global_step=6500, episodic_return=[8.389696e+16]\n",
-      "global_step=6500, episodic_return=[5.229774e+22]\n",
-      "global_step=6500, episodic_return=[3.5866386e+20]\n",
-      "global_step=6500, episodic_return=[3.286358e+15]\n",
-      "global_step=7000, episodic_return=[1.7938376e+20]\n",
-      "global_step=7000, episodic_return=[1.4729384e+16]\n",
-      "global_step=7000, episodic_return=[1.8185544e+21]\n",
-      "global_step=7000, episodic_return=[3.7867783e+13]\n",
-      "global_step=7000, episodic_return=[7.2984977e+14]\n",
-      "SPS: 2511\n",
-      "global_step=7500, episodic_return=[3.8969468e+15]\n",
-      "global_step=7500, episodic_return=[3.2409866e+23]\n",
-      "global_step=7500, episodic_return=[2.1286206e+16]\n",
-      "global_step=7500, episodic_return=[1.8436362e+21]\n",
-      "global_step=7500, episodic_return=[1.7602668e+21]\n",
-      "SPS: 2514\n",
-      "global_step=8000, episodic_return=[8.052676e+15]\n",
-      "global_step=8000, episodic_return=[8.775515e+16]\n",
-      "global_step=8000, episodic_return=[1.931583e+15]\n",
-      "global_step=8000, episodic_return=[9.260692e+19]\n",
-      "global_step=8000, episodic_return=[7.333772e+20]\n",
-      "SPS: 2517\n",
-      "global_step=8500, episodic_return=[1.5584471e+19]\n",
-      "global_step=8500, episodic_return=[1.1751304e+20]\n",
-      "global_step=8500, episodic_return=[1.4623843e+17]\n",
-      "global_step=8500, episodic_return=[6.493641e+17]\n",
-      "global_step=8500, episodic_return=[1.1302973e+19]\n",
-      "SPS: 2520\n",
-      "global_step=9000, episodic_return=[7.873127e+14]\n",
-      "global_step=9000, episodic_return=[6.9538794e+18]\n",
-      "global_step=9000, episodic_return=[5.2100858e+10]\n",
-      "global_step=9000, episodic_return=[6.146627e+20]\n",
-      "global_step=9000, episodic_return=[1.4831565e+10]\n",
-      "global_step=9500, episodic_return=[1.7923044e+21]\n",
-      "global_step=9500, episodic_return=[1.3141149e+19]\n",
-      "global_step=9500, episodic_return=[3.612094e+14]\n",
-      "global_step=9500, episodic_return=[2.4289987e+24]\n",
-      "global_step=9500, episodic_return=[1.3379402e+22]\n",
-      "SPS: 2521\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ppo\n",
     "import numpy as np\n",
@@ -138,21 +13,86 @@
     "    n_assets = observation.shape[1]\n",
     "    return np.zeros(n_assets)\n",
     "\n",
-    "# Manually create `Args`\n",
+    "# Experiment arguments\n",
     "args = ppo.Args(\n",
-    "    env_id=\"PortfolioEnv-v0\",\n",
-    "    total_timesteps=10000,\n",
-    "    num_envs=5,\n",
-    "    n_assets=3,\n",
-    "    window_size=10,\n",
-    "    action_step_size=0.05,\n",
-    "    closing_prices=np.random.rand(2000, 3),  # ✅ Use actual data\n",
-    "    reward_method=\"portfolio_value\",\n",
-    "    prediction_model=my_trained_model  # ✅ ML model for predictions\n",
-    ")\n",
+    "    exp_name=\"experiment_0\",         # name of this experiment\n",
+    "    seed=1,                          # random seed\n",
+    "    torch_deterministic=True,        # if True, sets torch.backends.cudnn.deterministic = False\n",
+    "    cuda=True,                       # if True, CUDA will be enabled by default\n",
+    "    track=False,                     # if True, track experiment with Weights & Biases\n",
     "\n",
-    "# Run PPO directly\n",
-    "ppo.main(args)\n"
+    "    # Environment specific arguments\n",
+    "    n_assets=3,                      # number of assets in the portfolio\n",
+    "    window_size=5,                   # size of the historical‐price window (observation dimension)\n",
+    "    action_step_size=0.1,            # step size for actions\n",
+    "    episode_length=100,              # length of each episode\n",
+    "    reward_method=\"portfolio_value\", # reward method: \"portfolio_value\" or \"sharpe_ratio\"\n",
+    "    g1=0.5,                          # weight for Sharpe ratio in combined reward\n",
+    "    g2=0.5,                          # weight for portfolio return in combined reward\n",
+    "    closing_prices=np.array([]),     # array of historical closing prices for all assets\n",
+    "    prediction_model=None,           # optional external model for price predictions\n",
+    "\n",
+    "    # Algorithm specific arguments\n",
+    "    env_id=\"PortfolioEnv-v0\",        # gym environment ID\n",
+    "    total_timesteps=500000,          # total timesteps for training\n",
+    "    learning_rate=2.5e-4,            # learning rate for the optimizer\n",
+    "    num_envs=4,                      # number of parallel environments\n",
+    "    num_steps=128,                   # steps per environment rollout before update\n",
+    "    anneal_lr=True,                  # if True, linearly anneals learning rate\n",
+    "    gamma=0.99,                      # discount factor for rewards\n",
+    "    gae_lambda=0.95,                 # lambda parameter for GAE (advantage estimation)\n",
+    "    num_minibatches=4,               # number of minibatches per update epoch\n",
+    "    update_epochs=4,                 # number of update epochs (K epochs in PPO)\n",
+    "    norm_adv=True,                   # if True, normalize advantages\n",
+    "    clip_coef=0.2,                   # clipping coefficient for PPO surrogate objective\n",
+    "    clip_vloss=True,                 # if True, clip value function updates\n",
+    "    ent_coef=0.01,                   # entropy bonus coefficient\n",
+    "    vf_coef=0.5,                     # value loss coefficient\n",
+    "    max_grad_norm=0.5,               # max gradient norm (gradient clipping)\n",
+    "    target_kl=None,                  # KL divergence threshold for early stopping\n",
+    "\n",
+    "    # Computed at runtime\n",
+    "    batch_size=0,                    # batch size (computed internally from num_envs & num_steps)\n",
+    "    minibatch_size=0,                # minibatch size (computed internally)\n",
+    "    num_iterations=0                 # number of iterations (computed internally)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "coffeescript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ppo.main(args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\")"
    ]
   }
  ],
