--- a/model_linear.ipynb
+++ b/model_linear.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total samples loaded: 55000\n"
+      "Total samples loaded: 195000\n"
      ]
     }
    ],
@@ -70,22 +70,22 @@
     "    return X_train, y_train, X_val, y_val, X_test, y_test\n",
     "\n",
     "# Load data from JSON\n",
-    "all_records = load_data_from_json(\"BTC_train_data.json\")\n",
+    "all_records = load_data_from_json(\"BTC_train_data_new.json\")\n",
     "print(\"Total samples loaded:\", len(all_records))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train shape: (30000, 100) (30000,)\n",
-      "Val shape:   (10000, 100) (10000,)\n",
-      "Test shape:  (15000, 100) (15000,)\n"
+      "Train shape: (140000, 100) (140000,)\n",
+      "Val shape:   (20000, 100) (20000,)\n",
+      "Test shape:  (20000, 100) (20000,)\n"
      ]
     }
    ],
@@ -94,9 +94,9 @@
     "# Split into train/val/test\n",
     "X_train_np, y_train_np, X_val_np, y_val_np, X_test_np, y_test_np = prepare_splits(\n",
     "    all_records,\n",
-    "    train_size=30000,\n",
-    "    val_size=10000,\n",
-    "    test_size=15000\n",
+    "    train_size=140000,\n",
+    "    val_size=20000,\n",
+    "    test_size=20000\n",
     ")\n",
     "\n",
     "print(\"Train shape:\", X_train_np.shape, y_train_np.shape)\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,42 +152,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1/20] Train MSE: 3258.8954 | Val MSE: 2316.8016\n",
-      "[Epoch 2/20] Train MSE: 2377.2327 | Val MSE: 2328.3594\n",
-      "[Epoch 3/20] Train MSE: 2386.0943 | Val MSE: 2331.5752\n",
-      "[Epoch 4/20] Train MSE: 2337.9505 | Val MSE: 2264.4180\n",
-      "[Epoch 5/20] Train MSE: 2370.8813 | Val MSE: 2259.6350\n",
-      "[Epoch 6/20] Train MSE: 2397.1665 | Val MSE: 2323.6986\n",
-      "[Epoch 7/20] Train MSE: 2407.1159 | Val MSE: 2230.5633\n",
-      "[Epoch 8/20] Train MSE: 2368.6187 | Val MSE: 2732.6583\n",
-      "[Epoch 9/20] Train MSE: 2411.9937 | Val MSE: 2243.0132\n",
-      "[Epoch 10/20] Train MSE: 2328.0142 | Val MSE: 2212.5552\n",
-      "[Epoch 11/20] Train MSE: 2288.1631 | Val MSE: 2223.5644\n",
-      "[Epoch 12/20] Train MSE: 2285.3339 | Val MSE: 2194.7944\n",
-      "[Epoch 13/20] Train MSE: 2292.6956 | Val MSE: 2296.9722\n",
-      "[Epoch 14/20] Train MSE: 2295.4115 | Val MSE: 2358.8071\n",
-      "[Epoch 15/20] Train MSE: 2298.1767 | Val MSE: 2161.0060\n",
-      "[Epoch 16/20] Train MSE: 2364.6597 | Val MSE: 2457.3042\n",
-      "[Epoch 17/20] Train MSE: 2280.9746 | Val MSE: 2150.3453\n",
-      "[Epoch 18/20] Train MSE: 2213.7897 | Val MSE: 2112.2178\n",
-      "[Epoch 19/20] Train MSE: 2237.5467 | Val MSE: 2097.0313\n",
-      "[Epoch 20/20] Train MSE: 2273.0961 | Val MSE: 2090.1144\n"
+      "[Epoch 1/20] Train MSE: 18597.3799 | Val MSE: 58513.2072\n",
+      "[Epoch 2/20] Train MSE: 17925.3028 | Val MSE: 74497.1344\n",
+      "[Epoch 3/20] Train MSE: 17199.0672 | Val MSE: 64591.0666\n",
+      "[Epoch 4/20] Train MSE: 17675.9906 | Val MSE: 56952.8802\n",
+      "[Epoch 5/20] Train MSE: 17457.9061 | Val MSE: 57242.8312\n",
+      "[Epoch 6/20] Train MSE: 17608.0719 | Val MSE: 56425.4542\n",
+      "[Epoch 7/20] Train MSE: 17000.9513 | Val MSE: 62292.5403\n",
+      "[Epoch 8/20] Train MSE: 17504.1561 | Val MSE: 58344.7456\n",
+      "[Epoch 9/20] Train MSE: 17054.2809 | Val MSE: 65594.9181\n",
+      "[Epoch 10/20] Train MSE: 17230.4352 | Val MSE: 55497.5701\n",
+      "[Epoch 11/20] Train MSE: 16945.9657 | Val MSE: 55192.7850\n",
+      "[Epoch 12/20] Train MSE: 17190.9933 | Val MSE: 54986.6254\n",
+      "[Epoch 13/20] Train MSE: 17447.8068 | Val MSE: 57449.9099\n",
+      "[Epoch 14/20] Train MSE: 16497.2236 | Val MSE: 60419.1852\n",
+      "[Epoch 15/20] Train MSE: 16519.0755 | Val MSE: 56327.7269\n",
+      "[Epoch 16/20] Train MSE: 16238.7007 | Val MSE: 74235.9477\n",
+      "[Epoch 17/20] Train MSE: 16435.2349 | Val MSE: 60842.4948\n",
+      "[Epoch 18/20] Train MSE: 16739.4963 | Val MSE: 57850.7697\n",
+      "[Epoch 19/20] Train MSE: 16587.0928 | Val MSE: 63665.3231\n",
+      "[Epoch 20/20] Train MSE: 16593.4486 | Val MSE: 56806.3198\n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
+    "import numpy as np\n",
     "\n",
-    "def train_model(model, train_loader, val_loader, epochs=10, lr=1e-3):\n",
-    "    # Choose an optimizer (Adam or SGD)\n",
+    "def train_model(model, train_loader, val_loader, epochs=10, lr=1e-3, device=\"cpu\"):\n",
+    "    model.to(device)  # Move model to the appropriate device\n",
     "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
     "    \n",
     "    for epoch in range(1, epochs + 1):\n",
@@ -196,13 +198,10 @@
     "        train_losses = []\n",
     "        \n",
     "        for batch_x, batch_y in train_loader:\n",
-    "            # batch_x: shape (batch_size, window_size)\n",
-    "            # batch_y: shape (batch_size)\n",
+    "            batch_x, batch_y = batch_x.to(device), batch_y.to(device)  # Move to GPU if available\n",
     "            \n",
     "            # Forward pass\n",
-    "            pred = model(batch_x)  # shape (batch_size, 1)\n",
-    "            pred = pred.squeeze(1) # shape (batch_size)\n",
-    "            \n",
+    "            pred = model(batch_x).squeeze(1)  # shape (batch_size)\n",
     "            loss = F.mse_loss(pred, batch_y)\n",
     "            \n",
     "            # Backprop\n",
@@ -212,7 +211,6 @@
     "            \n",
     "            train_losses.append(loss.item())\n",
     "        \n",
-    "        # Average training loss\n",
     "        train_loss_mean = np.mean(train_losses)\n",
     "        \n",
     "        # ---- VALIDATION PHASE ----\n",
@@ -220,6 +218,7 @@
     "        val_losses = []\n",
     "        with torch.no_grad():\n",
     "            for batch_x, batch_y in val_loader:\n",
+    "                batch_x, batch_y = batch_x.to(device), batch_y.to(device)\n",
     "                pred = model(batch_x).squeeze(1)\n",
     "                loss = F.mse_loss(pred, batch_y)\n",
     "                val_losses.append(loss.item())\n",
@@ -230,17 +229,27 @@
     "              f\"Train MSE: {train_loss_mean:.4f} | \"\n",
     "              f\"Val MSE: {val_loss_mean:.4f}\")\n",
     "\n",
-    "\n",
-    "# Train for 20 epochs as an example\n",
-    "train_model(model, train_loader, val_loader, epochs=20, lr=2e-4)"
+    "# Example usage\n",
+    "train_model(model, train_loader, val_loader, epochs=20, lr=2e-4 )\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.6.0+cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.__version__)"
+   ]
   }
  ],
  "metadata": {
