--- a/run_training_experiment.ipynb
+++ b/run_training_experiment.ipynb
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1892,8 @@
    "source": [
     "import LSTM_model \n",
     "\n",
-    "final_model, scaler, cv_results, test_results = LSTM_model.main(\"BTC_train_data.json\")"
+    "final_model, scaler, cv_results, test_results = LSTM_model.main(\"BTC_train_data.json\")\n",
+    "L_model, scaler, cv_results, test_results = LSTM_model.main(\"BTC_train_data.json\")\n"
    ]
   },
   {
