--- a/run_training_experiment.ipynb
+++ b/run_training_experiment.ipynb
@@ -1041,7 +1041,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ppo\n",
+    "import torch\n",
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define prediction models for each asset\n",
+    "btc_linear_model = model = nn.Linear(in_features=window_size, out_features=1)\n",
+    "btc_linear_model.load_state_dict(torch.load(\"models/btc_1_year_linear_model.pth\"))\n",
+    "btc_linear_model.to(\"cuda\")  # Move model to GPU if needed\n",
+    "\n",
+    "eth_linear_model = nn.Linear(in_features=window_size, out_features=1)  # Adjust input_dim\n",
+    "eth_linear_model.load_state_dict(torch.load(\"models/eth_1_year_linear_model.pth\"))\n",
+    "eth_linear_model.to(\"cuda\")\n",
+    "\n",
+    "prediction_models = [btc_linear_model, eth_linear_model]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1053,21 +1082,6 @@
     }
    ],
    "source": [
-    "import ppo\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "# Re-instantiate the model first\n",
-    "btc_linear_model = model = nn.Linear(in_features=window_size, out_features=1)\n",
-    "btc_linear_model.load_state_dict(torch.load(\"models/btc_1_year_linear_model.pth\"))\n",
-    "btc_linear_model.to(\"cuda\")  # Move model to GPU if needed\n",
-    "\n",
-    "eth_linear_model = nn.Linear(in_features=window_size, out_features=1)  # Adjust input_dim\n",
-    "eth_linear_model.load_state_dict(torch.load(\"models/eth_1_year_linear_model.pth\"))\n",
-    "eth_linear_model.to(\"cuda\")\n",
-    "\n",
-    "prediction_models = [btc_linear_model, eth_linear_model]\n",
-    "\n",
     "# Experiment arguments\n",
     "args = ppo.Args(\n",
     "    exp_name=\"experiment_1_year\",         # name of this experiment\n",
